tests/models/struct/unnamed/f32/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    f32
);
fn main() {}
